--- a/index.html
+++ b/index.html
@@ -10,23 +10,179 @@
     <tr>
         <th>Понедельник</th>
         <td>14.40 - 16.00</td>
+        <td class="pair-list">
+            <p>
+                I лк. <span class="audi-colored">100-3а</span> АиСД
+            </p>
+            <p>
+                II лк. <span class="audi-colored">100-3а</span> КСиС
+            </p>
+        </td>
     </tr>
     <tr>
-        <td>16.30 - 17.50</td>
+        <th></th>
+        <td>
+            16.30-17.50
+        </td>
+        <td class="pair-list">
+            <p>Физра</p>
+        </td>
     </tr>
     <tr>
-        <td>18.05 - 19.25</td>
+        <th></th>
+        <td>
+            18.05-19.25
+        </td>
+        <td class="pair-list"><p>лк. <span class="audi-colored">100-3а</span> Мат анализ</p></td>
     </tr>
     <tr>
+        <th></th>
         <td>19.40 - 21.00</td>
+        <td class="pair-list"><p>Англ яз</p></td>
     </tr>
     <tr>
         <th>Вторник</th>
         <td>14.40 - 16.00</td>
+        <td class="pair-list"><p>лк. <span class="audi-colored">200-3а</span> ОАиП</p></td>
+
     </tr>
-    <tr><td>16.30 - 17.50</td></tr>
-    <tr><td>18.05 - 19.25</td></tr>
-    <tr><td>19.40 - 21.00</td></tr>
+    <tr>
+        <th></th>
+        <td>16.30 - 17.50</td>
+        <td class="pair-list"><p>лр. Физика</p></td>
+
+    </tr>
+    <tr>
+        <th></th>
+        <td>18.05 - 19.25</td>
+        <td class="pair-list"><p>пз. <span class="audi-colored">336-4</span> История</p></td>
+
+    </tr>
+    <tr>
+        <th></th>
+        <td>19.40 - 21.00</td>
+        <td class="pair-list"><p>лр <span class="audi-colored">322-1</span> ОАиП</p></td>
+    </tr>
+    <tr>
+        <th>Среда</th>
+        <td>14.40 - 16.00</td>
+        <td class="pair-list">
+            <p>I <span class="audi-colored">Балдеть</span></p>
+            <p>II лк. <span class="audi-colored">305-4</span> Численные методы</p>
+        </td>
+
+    </tr>
+    <tr>
+        <th></th>
+        <td>16.30 - 17.50</td>
+        <td class="pair-list"><p>лк. <span class="audi-colored">100-3а</span>   Физика</p></td>
+
+    </tr>
+    <tr>
+        <th></th>
+        <td>18.05 - 19.25</td>
+        <td class="pair-list">
+            <p>I лр. <span class="audi-colored">202-4</span> Численные методы</p>
+            <p>II лр. <span class="audi-colored">324-1</span> АиСД</p>
+        </td>
+
+    </tr>
+    <tr>
+        <th></th>
+        <td>19.40 - 21.00</td>
+        <td class="pair-list">
+            <p>I <span class="audi-colored">Балдеть</span></p>
+            <p>II пз. <span class="audi-colored">508-1</span> Физика</p>
+        </td>
+    </tr>
+
+    <tr>
+        <th>Четверг</th>
+        <td>14.40 - 16.00</td>
+        <td class="pair-list">
+            <p>лр. <span class="audi-colored">324-1</span> КПО</p>
+        </td>
+    </tr>
+    <tr>
+        <th></th>
+        <td>16.30 - 17.50</td>
+        <td class="pair-list">
+            <p>Физра</p>
+        </td>
+
+    </tr>
+    <tr>
+        <th></th>
+        <td>18.05 - 19.25</td>
+        <td class="pair-list">
+            <p>лк. <span class="audi-colored">313-1</span> КПО</p>
+        </td>
+
+    </tr>
+    <tr>
+        <th></th>
+        <td>19.40 - 21.00</td>
+        <td class="pair-list">
+            <p><span class="audi-colored">Балдеть</span></p>
+        </td>
+    </tr>
+
+    <tr>
+        <th>Пятница</th>
+        <td>14.40 - 16.00</td>
+        <td class="pair-list">
+            <p>I лк. <span class="audi-colored">200-3а</span> Физика</p>
+            <p>II лк. <span class="audi-colored">200-3а</span> Коррупция лол</p>
+        </td>
+
+    </tr>
+    <tr>
+        <th></th>
+        <td>16.30 - 17.50</td>
+        <td class="pair-list"><p>Англ яз</p></td>
+
+    </tr>
+    <tr>
+        <th></th>
+        <td>18.05 - 19.25</td>
+        <td class="pair-list">
+            <p>I <span class="audi-colored">Балдеть</span></p>
+            <p>II лр. <span class="audi-colored">413-1</span> КСиС</p>
+        </td>
+
+    </tr>
+    <tr>
+        <th></th>
+        <td>19.40 - 21.00</td>
+        <td class="pair-list">
+            <p><span class="audi-colored">Балдеть</span></p>
+        </td>
+    </tr>
+
+    <tr>
+        <th>Суббота</th>
+        <td>11.25 - 12.45</td>
+        <td class="pair-list">
+            <p>пз. <span class="audi-colored">312-4</span> Мат. Анализ</p>
+        </td>
+
+    </tr>
+    <tr>
+        <th></th>
+        <td>13.00 - 14.20</td>
+        <td class="pair-list">
+            <p>лк. <span class="audi-colored">100-3а</span> История</p>
+        </td>
+    </tr>
+
+    <tr>
+        <th></th>
+        <td>14.20 - 23.59</td>
+        <td class="pair-list">
+            <p><span class="audi-colored">Балдеть</span></p>
+        </td>
+    </tr>
+
 </table>
 </body>
 </html>
