--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <tr>
         <th></th>
         <td>19.40 - 21.00</td>
-        <td class="pair-list"><p>лр <span class="audi-colored">322-1</span> ОАиП</p></td>
+        <td class="pair-list"><p>лр. <span class="audi-colored">322-1</span> ОАиП</p></td>
     </tr>
     <tr>
         <th>Среда</th>
