--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <tr>
         <th></th>
         <td>
-            16.30-17.50
+            16.30 - 17.50
         </td>
         <td class="pair-list">
             <p>Физра</p>
@@ -31,7 +31,7 @@
     <tr>
         <th></th>
         <td>
-            18.05-19.25
+            18.05 - 19.25
         </td>
         <td class="pair-list"><p>лк. <span class="audi-colored">100-3а</span> Мат анализ</p></td>
     </tr>
@@ -67,7 +67,7 @@
         <th>Среда</th>
         <td>14.40 - 16.00</td>
         <td class="pair-list">
-            <p>I <span class="audi-colored">Балдеть</span></p>
+            <p>I <span class="audi-colored">235-4</span> КЯР</p>
             <p>II лк. <span class="audi-colored">305-4</span> Численные методы</p>
         </td>
 
@@ -91,8 +91,8 @@
         <th></th>
         <td>19.40 - 21.00</td>
         <td class="pair-list">
-            <p>I <span class="audi-colored">Балдеть</span></p>
-            <p>II пз. <span class="audi-colored">508-1</span> Физика</p>
+            <p> <span class="audi-colored">Балдеть</span></p>
+
         </td>
     </tr>
 
@@ -123,18 +123,25 @@
         <th></th>
         <td>19.40 - 21.00</td>
         <td class="pair-list">
-            <p><span class="audi-colored">Балдеть</span></p>
+            <p>I <span class="audi-colored">Балдеть</span></p>
+            <p>II <span class="audi-colored">508-1</span>Физика</p>
+        </td>
+    </tr>
+    <tr>
+        <th>Пятница</th>
+        <td>11.25 - 12.45</td>
+        <td class="pair-list">
+            <p><span class="audi-colored">308-1</span> Практика</p>
         </td>
     </tr>
 
     <tr>
-        <th>Пятница</th>
+        <th></th>
         <td>14.40 - 16.00</td>
         <td class="pair-list">
             <p>I лк. <span class="audi-colored">200-3а</span> Физика</p>
-            <p>II лк. <span class="audi-colored">200-3а</span> Коррупция лол</p>
+            <p>II <span class="audi-colored"><Балдеть></Балдеть></span></p>
         </td>
-
     </tr>
     <tr>
         <th></th>
