--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <td>14.40 - 16.00</td>
         <td class="pair-list">
             <p>I лк. <span class="audi-colored">200-3а</span> Физика</p>
-            <p>II <span class="audi-colored"><Балдеть></Балдеть></span></p>
+            <p>II <span class="audi-colored">Балдеть</span></p>
         </td>
     </tr>
     <tr>
